--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       <h1 class="project-name"><img src="assets/images/logo_128.png" style="width: 70px; height: 70px; margin-bottom: -20px;">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLK13nKBqAqAJbXVsPMt4z7Jl8kbiBKSr_C3nZnLZXRqZ2iw/viewform" class="btn" style="color: #696969"><img src="assets/images/download.png" style="height: 25px; margin-bottom: -5px; margin-right: 5px;">Download KABR.zip</a>
-        <a href="404.html" class="btn" style="color: #696969"><img src="assets/images/paper.png" style="height: 25px; margin-bottom: -5px; margin-right: 5px;">Paper</a>
+        <a href="assets/paper/KABR.pdf" target="_blank" class="btn" style="color: #696969"><img src="assets/images/paper.png" style="height: 25px; margin-bottom: -5px; margin-right: 5px;">Paper</a>
     </header>
 
     <main id="content" class="main-content" role="main">
