--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,9 +6,9 @@ $large-breakpoint: 64em !default;
 $medium-breakpoint: 42em !default;
 
 // Headers
-$header-heading-color: #696969 !default;
-$header-bg-color: #B1B3B3FF !default;
-$header-bg-color-secondary: #E3CD81FF !default;
+$header-heading-color: #212F3D !default;
+$header-bg-color: #7F8081 !default;
+$header-bg-color-secondary: #C9C9C9 !default;
 
 // Text
 $section-headings-color: #696969 !default;
@@ -23,6 +23,6 @@ $code-text-color: #567482 !default;
 // Borders
 $border-color: #dce6f0 !default;
 $table-border-color: #e9ebec !default;
-$hr-border-color: #eff0f1 !default;
+$hr-border-color: #7FB3D5 !default;
 
 @import "{{ site.theme }}";
