--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLK13nKBqAqAJbXVsPMt4z7Jl8kbiBKSr_C3nZnLZXRqZ2iw/viewform" class="btn" style="color: #696969"><img src="assets/images/download.png" style="height: 25px; margin-bottom: -5px; margin-right: 5px;">Download KABR from Google Drive</a>
         <a href="https://huggingface.co/datasets/imageomics/KABR" class="btn" style="color: #696969"><img src="assets/images/download.png" style="height: 25px; margin-bottom: -5px; margin-right: 5px;">Download KABR from Hugging Face</a>
-        <a href="https://openaccess.thecvf.com/content/WACV2024W/CV4Smalls/papers/Kholiavchenko_KABR_In-Situ_Dataset_for_Kenyan_Animal_Behavior_Recognition_From_Drone_WACVW_2024_paper.pdf" target="_blank" class="btn" style="color: #696969"><img src="assets/images/paper.png" style="height: 25px; margin-bottom: -5px; margin-right: 5px;">Paper</a>
+        <a href="https://openaccess.thecvf.com/content/WACV2024W/CV4Smalls/papers/Kholiavchenko_KABR_In-Situ_Dataset_for_Kenyan_Animal_Behavior_Recognition_From_Drone_WACVW_2024_paper.pdf" target="_blank" class="btn" style="color: #696969"><img src="assets/images/paper.png" style="height: 25px; margin-bottom: -5px; margin-right: 5px;">Paper #1</a>
+      <a href="https://link.springer.com/article/10.1007/s11042-024-20512-4" target="_blank" class="btn" style="color: #696969"><img src="assets/images/paper.png" style="height: 25px; margin-bottom: -5px; margin-right: 5px;">Paper #2</a>
     </header>
 
     <main id="content" class="main-content" role="main">
